<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvAluno"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome_aluno"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ra_aluno"
        app:layout_constraintStart_toStartOf="@+id/tvAluno"
        app:layout_constraintTop_toBottomOf="@+id/tvAluno" />

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="33dp"
        android:text="@string/titulo"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/tvQuantidade"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rgQtdeDados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="@+id/tvQuantidade"
        app:layout_constraintTop_toBottomOf="@+id/tvQuantidade">

        <RadioButton
            android:id="@+id/rbUmDado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/um_dado" />

        <RadioButton
            android:id="@+id/rbDoisDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dois_dado" />

        <RadioButton
            android:id="@+id/rbTresDados"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tres_dado" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvQuantidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="179dp"
        android:text="@string/escolha_qtde"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spTipoDado"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/rgQtdeDados"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rgQtdeDados"
        app:layout_constraintTop_toTopOf="@+id/rgQtdeDados" />

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:text="@string/escolha_tipo"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spTipoDado"
        app:layout_constraintStart_toStartOf="@+id/spTipoDado" />

    <Button
        android:id="@+id/btnJogar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/btn_jogar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rgQtdeDados" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="47dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/btnJogar"
        app:layout_constraintStart_toStartOf="@+id/btnJogar"
        app:layout_constraintTop_toBottomOf="@+id/btnJogar" />

</androidx.constraintlayout.widget.ConstraintLayout>